tests/netedit/demandElements/waypoint/basic/invalid_type/routes.netedit
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-02-23 10:07:31 by Eclipse SUMO netedit Version v1_12_0+0795-6d648fd3cc7
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <route id="route_0" edges="gneE0 gneE1" color="yellow">
        <stop lane="gneE0_0" startPos="7.00" endPos="17.00" duration="60.00" speed="13.89"/>
    </route>
</routes>
